# TRELLIS

./: Dockerfile
deploy/: .env  compose.yml  trellis-ros.yml  trellis.yml
deploy/config/: fastdds-config.xml  trellis-ros.yaml
docker/: build.sh  colcon_build.sh  dependency_snapshot.sh  entrypoint.sh  extras.repos  get_version_from_changelog.sh  rosdep_install.sh  rosdep_update.sh
docker/config/: bash_aliases  cyclone-dds.xml  fastdds-config.xml
trellis/renderers/: gaussian_render.py
trellis_ros/trellis_msgs/: CMakeLists.txt  README.adoc  package.xml
trellis_ros/trellis_msgs/srv/: Synthesize3DAsset.srv
trellis_ros/trellis_ros/: CMakeLists.txt  package.xml
trellis_ros/trellis_ros/config/: config.yaml
trellis_ros/trellis_ros/launch/: trellis.launch.py
trellis_ros/trellis_ros/nodes/: trellis_node
trellis_ros/trellis_ros/trellis_ros/: server.py
